force-app/main/default/objects/tc9_bgl__Acc_Segments__c/tc9_bgl__Acc_Segments__c.object-meta.xml
<CustomObject>
    <description>The Accounting Segment object holds copies of all segment values that are stored in the accounting system</description>
    <label>Accounting Segments</label>
    <nameField>
        <label>Segment Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>