force-app/main/default/objects/tc9_bgl__Acc_Segments__c/fields/tc9_bgl__Accounting_System_Reference__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_System_Reference__c</fullName>
    <label>Accounting System Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>