force-app/main/default/objects/tc9_bgl__Acc_Segments__c/fields/tc9_bgl__Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Active_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>