force-app/main/default/objects/tc9_bgl__Acc_Segments__c/fields/tc9_bgl__Segment_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Segment_Description__c</fullName>
    <label>Segment Description</label>
    <length>90</length>
    <type>Text</type>
</CustomField>