force-app/main/default/objects/tc9_bgl__Acc_Segments__c/recordTypes/tc9_bgl__Assignment_Department.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Assignment_Department</fullName>
    <active>true</active>
    <label>Assignment Department</label>
</RecordType>