force-app/main/default/objects/tc9_bgl__Acc_Segments__c/recordTypes/tc9_bgl__Cost_Code.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Cost_Code</fullName>
    <active>true</active>
    <label>Cost Code</label>
</RecordType>