force-app/main/default/objects/tc9_bgl__Acc_Segments__c/recordTypes/tc9_bgl__Location.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Location</fullName>
    <active>true</active>
    <description>Segment that is used to hold a Location Dimension</description>
    <label>Location</label>
</RecordType>