force-app/main/default/objects/tc9_bgl__Acc_Segments__c/recordTypes/tc9_bgl__Natural_Account.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Natural_Account</fullName>
    <active>true</active>
    <label>Natural Account</label>
</RecordType>