force-app/main/default/objects/tc9_bgl__Acc_Segments__c/recordTypes/tc9_bgl__Payment_Entity.recordType-meta.xml
<RecordType>
    <fullName>tc9_bgl__Payment_Entity</fullName>
    <active>true</active>
    <label>Payment Entity</label>
</RecordType>