force-app/main/default/objects/tc9_bgl__Acc_Segments__c/listViews/tc9_bgl__Natural_Accounts.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__Natural_Accounts</fullName>
    <columns>tc9_bgl__Accounting_System__c</columns>
    <columns>NAME</columns>
    <columns>tc9_bgl__Segment_Description__c</columns>
    <columns>tc9_bgl__Accounting_System_Reference__c</columns>
    <columns>tc9_bgl__Active_Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_bgl__Acc_Segments__c.tc9_bgl__Natural_Account</value>
    </filters>
    <label>Natural Accounts</label>
</ListView>